# sairi-sari-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: business_state.json
data/synthetic/: business_state.json
docs/: README.md  business-state-model.md  business.md  deployment-requirements.md  domain-model.md  feature-data-requirements.md  ledger-image-ingest-flow.md  ledger-storage-guidance.md  ocr-analysis-utang-ledger.md  product-requirements.md  roadmap.md  synthetic-data.md  telegram-board-dev.md  thread-charter.md
scripts/: extract_ledger_from_image.py  generate_synthetic_data.py  run_telegram_board.py
src/: __init__.py  business_state.py  ledger_ocr.py  main.py
src/sairi_sari_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ledger_ocr.py  test_parser.py  test_smoke.py
